--- a/trunk/CR_SuperSiblingNav/CR_SuperSiblingNav/CR_SuperSiblingNav.csproj
+++ b/trunk/CR_SuperSiblingNav/CR_SuperSiblingNav/CR_SuperSiblingNav.csproj
@@ -18,10 +18,11 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Source\IDE Tools\2011.1\bin\PlugIns</OutputPath>
+    <OutputPath>..\..\..\..\Documents\DevExpress\IDE Tools\Community\PlugIns\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
