--- a/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -86,12 +86,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyzedSourceCode.cs" />
+    <Compile Include="CodeIssues\AggregatedIssueLocator.cs" />
+    <Compile Include="CodeIssues\AllTokensByTypeFollowedByWhitespaceIssueLocator.cs" />
     <Compile Include="CodeIssues\AllTokensByTypeIssueLocator.cs" />
+    <Compile Include="CodeIssues\AllTokensByTypeNotFollowedByWhitespaceIssueLocator.cs" />
+    <Compile Include="CodeIssues\AllTokensByTypePrecededByWhitespaceIssueLocator.cs" />
+    <Compile Include="CodeIssues\AllTokensByTypeNotPrecededByWhitespaceIssueLocator.cs" />
     <Compile Include="CodeIssues\FirstParameterIssueLocator.cs" />
     <Compile Include="CodeIssues\FirstTokenByTypeIssueLocator.cs" />
     <Compile Include="CodeIssues\FirstToLastTokenByTypeIssueLocator.cs" />
     <Compile Include="CodeIssues\LastXmlDocCommentIssueLocator.cs" />
     <Compile Include="CodeIssues\SA1000_KeywordsMustBeSpacedCorrectly.cs" />
+    <Compile Include="CodeIssues\SA1001_CommasMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\XmlDocCommentIssueLocator.cs" />
     <Compile Include="CodeIssues\Keywords.cs" />
     <Compile Include="CodeIssues\LastTokenByTypeIssueLocator.cs" />
