--- a/trunk/CR_ImportNamespace/CR_ImportNamespace/CR_ImportNamespace.csproj
+++ b/trunk/CR_ImportNamespace/CR_ImportNamespace/CR_ImportNamespace.csproj
@@ -12,15 +12,17 @@
     <AssemblyName>CR_ImportNamespace</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Users\Rory.Becker\Documents\DevExpress\IDE Tools\Community\Plugins\</OutputPath>
+    <OutputPath>..\..\..\..\Documents\DevExpress\IDE Tools\Community\Plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -35,16 +37,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\2011.2\Bin\DevExpress.CodeRush.Interop.dll</HintPath>
     </Reference>
-    <Reference Include="DevExpress.CodeRush.UserControls, Version=11.2.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
+    <Reference Include="DevExpress.CodeRush.UserControls, Version=11.2.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.DXCore.Localization, Version=11.2.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
+    <Reference Include="DevExpress.DXCore.Localization, Version=11.2.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="DevExpress.DXCore.MetaData, Version=11.2.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.DXCore.Platform, Version=11.2.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
+    <Reference Include="DevExpress.DXCore.Platform, Version=11.2.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="DevExpress.Refactor.Core, Version=11.2.0.0, Culture=neutral, PublicKeyToken=3f8e338797a7a380, processorArchitecture=MSIL">
