--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -85,6 +85,10 @@
     <Reference Include="DevExpress.CodeRush.VSCore" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeIssues\AllTokensNotFollowedByRequiredElementIssueLocator.cs" />
+    <Compile Include="CodeIssues\AllTokensNotPrecededByRequiredElementIssueLocator.cs" />
+    <Compile Include="CodeIssues\AllTokensPrecededByBannedElementIssueLocator.cs" />
+    <Compile Include="CodeIssues\AllTokensFollowedByBannedElementIssueLocator.cs" />
     <Compile Include="CodeIssues\CsTokenExtensions.cs" />
     <Compile Include="AnalyzedSourceCode.cs" />
     <Compile Include="CodeIssues\AggregatedIssueLocator.cs" />
