--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -122,6 +122,8 @@
     <Compile Include="CodeIssues\SA1016_OpeningAttributeBracketsMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\SA1017_ClosingAttributeBracketsMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\SA1018_NullableTypeSymbolsMustNotBePrecededBySpace.cs" />
+    <Compile Include="CodeIssues\SA1019_MemberAccessSymbolsMustBeSpacedCorrectly.cs" />
+    <Compile Include="CodeIssues\SA1020_IncrementDecrementSymbolsMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\XmlDocCommentIssueLocator.cs" />
     <Compile Include="CodeIssues\Keywords.cs" />
     <Compile Include="CodeIssues\LastTokenByTypeIssueLocator.cs" />
