--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -126,6 +126,7 @@
     <Compile Include="CodeIssues\SA1020_IncrementDecrementSymbolsMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\SA1021_NegativeSignsMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\SA1022_PositiveSignsMustBeSpacedCorrectly.cs" />
+    <Compile Include="CodeIssues\SA1023_DereferenceAndAccessOfMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\XmlDocCommentIssueLocator.cs" />
     <Compile Include="CodeIssues\Keywords.cs" />
     <Compile Include="CodeIssues\LastTokenByTypeIssueLocator.cs" />
