--- a/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -128,6 +128,9 @@
     <Compile Include="CodeIssues\SA1022_PositiveSignsMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\SA1023_DereferenceAndAccessOfMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\SA1024_ColonsMustBeSpacedCorrectly.cs" />
+    <Compile Include="CodeIssues\SA1025_CodeMustNotContainMultipleWhitespaceInARow.cs" />
+    <Compile Include="CodeIssues\SA1026_CodeMustNotContainSpaceAfterNewKeywordInImplicitlyTypedArrayAllocation.cs" />
+    <Compile Include="CodeIssues\SA1027_TabsMustNotBeUsed.cs" />
     <Compile Include="CodeIssues\XmlDocCommentIssueLocator.cs" />
     <Compile Include="CodeIssues\Keywords.cs" />
     <Compile Include="CodeIssues\LastTokenByTypeIssueLocator.cs" />
