--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -131,6 +131,7 @@
     <Compile Include="CodeIssues\SA1025_CodeMustNotContainMultipleWhitespaceInARow.cs" />
     <Compile Include="CodeIssues\SA1026_CodeMustNotContainSpaceAfterNewKeywordInImplicitlyTypedArrayAllocation.cs" />
     <Compile Include="CodeIssues\SA1027_TabsMustNotBeUsed.cs" />
+    <Compile Include="CodeIssues\SA1107_CodeMustNotContainMultipleStatementsOnOneLine.cs" />
     <Compile Include="CodeIssues\XmlDocCommentIssueLocator.cs" />
     <Compile Include="CodeIssues\Keywords.cs" />
     <Compile Include="CodeIssues\LastTokenByTypeIssueLocator.cs" />
