--- a/trunk/CR_StyleCop/CR_StyleCop.Tests/CR_StyleCop.Tests.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop.Tests/CR_StyleCop.Tests.csproj
@@ -62,38 +62,51 @@
     <Reference Include="DX_CPPLanguage, Version=11.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Program Files\DevExpress 2011.2\IDETools\System\DXCore\BIN\SYSTEM\DX_CPPLanguage.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DX_CSharpLanguage, Version=11.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Program Files\DevExpress 2011.2\IDETools\System\DXCore\BIN\SYSTEM\DX_CSharpLanguage.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DX_VBLanguage, Version=11.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Program Files\DevExpress 2011.2\IDETools\System\DXCore\BIN\SYSTEM\DX_VBLanguage.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="Gallio, Version=3.2.0.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL" />
+    <Reference Include="Gallio, Version=3.2.0.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Gallio35, Version=3.2.0.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
       <HintPath>..\packages\Gallio.3.2.601\lib\NET35\Gallio35.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="MbUnit, Version=3.2.0.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
+      <Private>True</Private>
     </Reference>
     <Reference Include="MbUnit35, Version=3.2.0.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
       <HintPath>..\packages\Gallio.3.2.601\lib\NET35\MbUnit35.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Build.Engine" />
-    <Reference Include="StyleCop, Version=4.5.25.0, Culture=neutral, PublicKeyToken=f904653c63bc2738, processorArchitecture=MSIL">
+    <Reference Include="StyleCop, Version=0.0.0.0, Culture=neutral, PublicKeyToken=f904653c63bc2738, processorArchitecture=MSIL">
       <HintPath>..\packages\StyleCop.4.5.25.0\lib\net35\StyleCop.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="StyleCop.CSharp, Version=4.5.25.0, Culture=neutral, PublicKeyToken=f904653c63bc2738, processorArchitecture=MSIL">
+    <Reference Include="StyleCop.CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=f904653c63bc2738, processorArchitecture=MSIL">
       <HintPath>..\packages\StyleCop.4.5.25.0\lib\net35\StyleCop.CSharp.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <Private>True</Private>
     </Reference>
     <Reference Include="StyleCop.CSharp.Rules">
       <HintPath>..\packages\StyleCop.4.5.25.0\lib\net35\StyleCop.CSharp.Rules.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -129,11 +142,15 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Compile Include="RulesTests.LayoutRules.cs" />
+    <None Include="Settings.StyleCop">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CR_StyleCop\CR_StyleCop.csproj">
       <Project>{FE4E4D13-1860-484E-BBBA-5BAB71F9F22C}</Project>
       <Name>CR_StyleCop</Name>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
