--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -107,6 +107,7 @@
     <Compile Include="CodeIssues\FirstTokenByTypeIssueLocator.cs" />
     <Compile Include="CodeIssues\FirstToLastTokenByTypeIssueLocator.cs" />
     <Compile Include="CodeIssues\LanguageElementExtensions.cs" />
+    <Compile Include="CodeIssues\LastTokenIssueLocator.cs" />
     <Compile Include="CodeIssues\LastXmlDocCommentIssueLocator.cs" />
     <Compile Include="CodeIssues\SA1000_KeywordsMustBeSpacedCorrectly.cs" />
     <Compile Include="CodeIssues\SA1001_CommasMustBeSpacedCorrectly.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="CodeIssues\SA1026_CodeMustNotContainSpaceAfterNewKeywordInImplicitlyTypedArrayAllocation.cs" />
     <Compile Include="CodeIssues\SA1027_TabsMustNotBeUsed.cs" />
     <Compile Include="CodeIssues\SA1107_CodeMustNotContainMultipleStatementsOnOneLine.cs" />
+    <Compile Include="CodeIssues\SA1117_ParametersMustBeOnSameLineOrSeparateLines.cs" />
     <Compile Include="CodeIssues\SA1517_CodeMustNotContainBlankLinesAtStartOfFile.cs" />
     <Compile Include="CodeIssues\SA1518_CodeMustNotContainBlankLinesAtEndOfFile.cs" />
     <Compile Include="CodeIssues\XmlDocCommentIssueLocator.cs" />
